package main.java.ch.gibb_iet.model;

public class Illustrator {
    private String name;

    public Illustrator(String name) {
        this.name = name;
    }

    public String getName() {
        return name;
    }

    public void setName(String name) {
        this.name = name;
    }
}
